--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -148,11 +148,16 @@ table {
   width: 100vw;
   min-height: fit-content;
   height: 160px;
-  background-color: aquamarine;
+  background-color: white;
   display: flex;
   align-items: center;
-  justify-content: center;
-  gap: 20%;
+  justify-content: space-between;
+  -webkit-box-shadow: 5px 5px 15px 5px #e8bdbd, -9px 5px 15px 5px #ffe488,
+    12px 10px 15px 7px #e488ff, -10px 10px 15px 7px #ff616b,
+    -10px -7px 27px 1px #8e5cff, 20px 20px 30px 20px rgba(0, 0, 0, 0.4);
+  box-shadow: 50px 50px 150px 150px #e8bdbd 20px 5px 15px 5px #ffe488,
+    12px 10px 15px 7px #e488ff, -10px 10px 15px 7px #ff616b,
+    -10px -7px 27px 1px #8e5cff, 20px 20px 30px 20px rgba(0, 0, 0, 0.4);
 }
 
 #logoContainer {
@@ -168,11 +173,31 @@ table {
   height: inherit;
 }
 
-#navBarMenu,
-#navBarIcons {
+#navBarMenu {
+  height: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   gap: 25px;
+}
+
+#navBarIcons {
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  padding: 0 15px 25px 0;
+  justify-content: center;
+  align-items: end;
+  gap: 25px;
+}
+
+.material-symbols-outlined {
+  font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 48;
+}
+
+.material-symbols-outlined:hover {
+  font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 48;
+  color: #e488ff;
+  cursor: pointer;
 }
