--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -138,8 +138,8 @@ table {
 }
 
 #content {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 
 /* NAVBAR STYLING */
@@ -152,12 +152,6 @@ table {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  -webkit-box-shadow: 5px 5px 15px 5px #e8bdbd, -9px 5px 15px 5px #ffe488,
-    12px 10px 15px 7px #e488ff, -10px 10px 15px 7px #ff616b,
-    -10px -7px 27px 1px #8e5cff, 20px 20px 30px 20px rgba(0, 0, 0, 0.4);
-  box-shadow: 50px 50px 150px 150px #e8bdbd 20px 5px 15px 5px #ffe488,
-    12px 10px 15px 7px #e488ff, -10px 10px 15px 7px #ff616b,
-    -10px -7px 27px 1px #8e5cff, 20px 20px 30px 20px rgba(0, 0, 0, 0.4);
 }
 
 #logoContainer {
@@ -182,6 +176,15 @@ table {
   gap: 25px;
 }
 
+.navBarItem {
+  padding: 10px;
+}
+
+.navBarItem:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
 #navBarIcons {
   height: 100%;
   display: flex;
@@ -200,4 +203,40 @@ table {
   font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 48;
   color: #e488ff;
   cursor: pointer;
+}
+
+.active {
+  background-color: #feefec;
+  border-radius: 15px;
+  padding-bottom: 1rem;
+}
+
+.homeBackground {
+  width: 100vw;
+  height: 40rem;
+  background-image: url(/src/assets/img/home-page-big.jpg);
+  background-size: cover;
+}
+.menuBackground {
+  width: 100%;
+  height: 40rem;
+  background-image: url(/src/assets/img/pastry.jpg);
+  background-size: cover;
+}
+.aboutBackground {
+  width: 100%;
+  height: 40rem;
+  background-image: url(/src/assets/img/macaroon.jpg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: 100%;
+  background-color: #f6faf9;
+}
+
+#homeContent {
+  width: 15rem;
+  height: 15rem;
+  position: absolute;
+  top: 35%;
+  left: 10%;
 }
